# paper-eca-llm-hypothesis-workflow

./: .gitignore  PUBLICATION_CHECKLIST.md  README.md  cellular-automata.md  pyproject.toml  scientific-research.md
.github/workflows/: tests.yml
docs/: ai-hypothesis-loop.md  hypothesis-quality-checklist.md  methodology.md  reading-guide.md  references.md  research-question.md
docs/research-notes/: 001-first-hypothesis-review-comparison.md  002-publication-positioning.md  003-follow-up-experiments-results.md  README.md
domains/cellular-automata/: profile.md
domains/scientific-research/: profile.md
examples/: hypothesis_response_example.json
hypotheses/: review_20260618_001.json  review_20260618_comparison.md  review_20260618_eca01.json
notebooks/: 001_ca_rule_space_exploration.ipynb
prompts/: hypothesis-review.md
schemas/: hypothesis_response.schema.json
src/cellauto_lab/: __init__.py  metrics.py  reporting.py  rules.py  simulator.py
tests/: test_metrics.py  test_package_api.py  test_reporting.py  test_rules.py  test_simulator.py
