[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-eca-llm-hypothesis-workflow"
version = "0.1.0"
description = "Governed LLM-assisted hypothesis generation on elementary cellular automata"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Leonardo Sigales", email = "leonardosigales@gmail.com" }]

dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "jupyter>=1.0",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
